--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
     "gulp-sass": "^2.0.4"
   },
@@ -26,6 +27,7 @@
     "angular-ui-tinymce": "0.0.5",
     "bootstrap": "^3.3.5",
     "jquery": "^2.1.4",
+    "malihu-custom-scrollbar-plugin": "^3.0.9",
     "nw": "^0.12.3",
     "tinymce": "^4.2.4",
     "underscore": "^1.8.3"
